# pychuck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  REFACTOR.md  REFACTOR_FEEDBACK.md  REPL_CODE_REVIEW.md  TODO.md  pyproject.toml
.github/workflows/: wheels.yml
docs/: ARCHITECTURE.md  CHUCK_LEXER.md  PYCHUCK_HOME.md  architecture.md  chuck_lexer.md  pychuck_home.md
docs/dev/: CODE_REVIEW.md  COMPLETION_TEST.md  DEBUG_BLACK_SCREEN.md  MOUSE_FIX.md  REFACTOR_PLAN.md  REPL_CODE_REVIEW.md  REPL_FEATURES.md  REPL_IMPROVEMENTS.md  RICH_TUI_IMPROVEMENTS.md  TUI_README.md  demo0.py
examples/: chuck
examples/analysis/: xsynth.ck
examples/python/: 01_basic_sine.py  02_offline_render.py  03_load_chuck_file.py  04_multiple_shreds.py  05_bitcrusher_chugin.py  06_reverb_chugin.py  07_parameter_control.py  08_advanced_synthesis.py  09_sequenced_shreds.py  README.md
scripts/: update.sh
scripts/cmake/: fn_add_chugin.cmake
src/: CMakeLists.txt  _pychuck.cpp
src/pychuck/: __init__.py  __main__.py  _pychuck.pyi
src/pychuck/cli/: chuck_lexer.py  commands.py  executor.py  main.py  parser.py  paths.py  repl.py  session.py  tui.py  tui_basic.py  tui_rich.py  tui_rich.tcss  tui_simple.py
src/pychuck/cli/widgets/: __init__.py  audio_meter.py  globals_panel.py  shred_list.py
src/pychuck/tui/: commands.py  common.py  editor.py  parser.py  paths.py  project.py  repl.py  session.py  tui.py
tests/: test_basic.py  test_chuck_lexer.py  test_cli.py  test_error_handling.py  test_examples.py  test_global_events.py  test_global_variables.py  test_project_versioning.py  test_realtime_audio.py  test_shred_management.py  test_textual_minimal.py
